learnt more about units and sizes css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <h1>CSS Selectors</h1>
+  <header>
+    <h1>CSS Selectors</h1>
+  </header>
   <main>
     <article>
       <h2>Article 1</h2>
