--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <header>
+  <header class="container">
     <h1>CSS Selectors</h1>
   </header>
-  <main>
+  <main class="container">
     <article>
       <h2>Article 1</h2>
       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste aperiam nostrum, aut, ab
@@ -48,6 +48,7 @@
         alias
         quasi accusantium!</p>
     </article>
+    <div class="circle"></div>
   </main>
 </body>
 
