--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,11 +20,11 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam repellendus eos dicta
       deleniti repudiandae molestias adipisci autem eveniet repellat laudantium cupiditate culpa
       unde veniam distinctio ipsam, dolor corrupti provident earum.</p>
-    <form>
+    <!-- <form>
       <label for="name">Name</label>
       <input type="text" id="name" placeholder="Your Name" />
       <button>Submit</button>
-    </form>
+    </form> -->
   </main>
 </body>
 
