--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <h1>CSS Selectors</h1>
   </header>
   <main>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam repellendus eos dicta
-      deleniti repudiandae molestias adipisci autem eveniet repellat laudantium cupiditate culpa
-      unde veniam distinctio ipsam, dolor corrupti provident earum.</p>
-    <!-- <form>
-      <label for="name">Name</label>
-      <input type="text" id="name" placeholder="Your Name" />
-      <button>Submit</button>
-    </form> -->
+    <p>Welcome to my page about <a href="https://www.google.com/search?q=+web+links">cool web
+        links</a>.</p>
+
+    <p>Actually.. that isn&apos;t a good search phrase. Let's search for <a
+      href="https://www.google.com/search?q=hypertext+links">hypertext links</a> instead!</p>
+
+    <p>I created page one with information about <a href="one.html">guitars</a>.</p>
+
+    <p>I created page two with information about <a href="two.html">JavaScript</a>.</p>
   </main>
 </body>
 
