learned more about columns

--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
 </head>
 
 <body>
-
+  <section class="columns">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, animi dolorem architecto
+      voluptate ex sint dolores eum excepturi quis maxime.</p>
+    <p>Ratione quam iste consequuntur molestiae, reiciendis similique nemo veritatis inventore in ea
+      esse, totam eos quod deleniti. Ipsa, mollitia rem.</p>
+    <!-- <h2>Next Topic</h2> -->
+    <p class="quote">&#11842;Where's my rug, man? <span class="nowrap">&#8212;The Dude&#8221;</span>
+    </p>
+    <p>Consequuntur adipisci voluptate, impedit, aperiam optio perferendis pariatur eaque repellat a
+      doloremque ipsam dolore qui assumenda earum odit distinctio libero?</p>
+    <p>Ipsam quia aut dolorem inventore asperiores consequuntur aperiam, distinctio rem laboriosam!
+      Voluptas eum nesciunt ab neque illum repellendus excepturi omnis.</p>
+  </section>
+  <p>Praesentium minus ipsa eveniet excepturi atque, quis earum a aliquid? Labore totam reiciendis
+    non pariatur adipisci earum numquam illo vitae.</p>
 </body>
 
 </html>
