--- a/index.html
+++ b/index.html
@@ -13,21 +13,40 @@
 </head>
 
 <body>
-  <section class="columns">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, animi dolorem architecto
-      voluptate ex sint dolores eum excepturi quis maxime.</p>
-    <p>Ratione quam iste consequuntur molestiae, reiciendis similique nemo veritatis inventore in ea
-      esse, totam eos quod deleniti. Ipsa, mollitia rem.</p>
-    <!-- <h2>Next Topic</h2> -->
-    <p class="quote">&#11842;Where's my rug, man? <span class="nowrap">&#8212;The Dude&#8221;</span>
-    </p>
-    <p>Consequuntur adipisci voluptate, impedit, aperiam optio perferendis pariatur eaque repellat a
-      doloremque ipsam dolore qui assumenda earum odit distinctio libero?</p>
-    <p>Ipsam quia aut dolorem inventore asperiores consequuntur aperiam, distinctio rem laboriosam!
-      Voluptas eum nesciunt ab neque illum repellendus excepturi omnis.</p>
+  <div class="outer-container">
+    <div class="inner-container">
+      <div class="box absolute">
+        <p>Absolute</p>
+      </div>
+      <div class="box relative">
+        <p>Relative</p>
+      </div>
+      <div class="box fixed">
+        <p>Fixed</p>
+      </div>
+      <div class="box sticky">
+        <p>Sticky</p>
+      </div>
+    </div>
+  </div>
+  <!-- <button class="social">🚀</button>
+  <section id="one">
+    <header class="blue">Header One</header>
+    <h2>One</h2>
   </section>
-  <p>Praesentium minus ipsa eveniet excepturi atque, quis earum a aliquid? Labore totam reiciendis
-    non pariatur adipisci earum numquam illo vitae.</p>
+  <section id="two">
+    <header class="red">Header Two</header>
+    <h2>Two</h2>
+  </section>
+  <section id="three">
+    <header class="green">Header Three</header>
+    <h2>Three</h2>
+  </section>
+  <footer>
+    <a href="#one">One</a> |
+    <a href="#two">Two</a> |
+    <a href="#three">Three</a> -->
+  </footer>
 </body>
 
 </html>
