--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="outer-container">
+  <!-- <div class="outer-container">
     <div class="inner-container">
       <div class="box absolute">
         <p>Absolute</p>
@@ -28,8 +28,8 @@
         <p>Sticky</p>
       </div>
     </div>
-  </div>
-  <!-- <button class="social">🚀</button>
+  </div> -->
+  <button class="social">🚀</button>
   <section id="one">
     <header class="blue">Header One</header>
     <h2>One</h2>
@@ -45,7 +45,7 @@
   <footer>
     <a href="#one">One</a> |
     <a href="#two">Two</a> |
-    <a href="#three">Three</a> -->
+    <a href="#three">Three</a>
   </footer>
 </body>
 
