--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 
 <body>
+  <header class="header el">
+    <h1>Header</h1>
+  </header>
+
   <main class="container">
     <div class="box">1</div>
     <div class="box">2</div>
@@ -21,6 +25,14 @@
     <div class="box">5</div>
     <div class="box">6</div>
   </main>
+
+  <aside class="sidebar el">
+    <h2>SideBar</h2>
+  </aside>
+
+  <footer class="footer el">
+    <h2>Footer</h2>
+  </footer>
 </body>
 
 </html>
