--- a/index.html
+++ b/index.html
@@ -13,29 +13,20 @@
 </head>
 
 <body>
-  <!-- <div class="container">
-    <section class="hero">
-      <figure class="profile-pic-figure">
-        <img src="img/profile-800x800.png" alt="Profile picture" title="My Profile Picture"
-        width="800" height="800">
-        <figcaption class="offscreen">Jane Doe</figcaption>
-      </figure>
-      <h1 class="h1">
-        <span class="nowrap">Hello 🖐️</span>
-        <span class="nowrap">I'm Jane</span>
-      </h1>
-    </section>
-  </div> -->
+  <header>
+    <h1>Header</h1>
+    <nav>
+      <h2>Nav</h2>
+    </nav>
+  </header>
 
-  <!-- <section class="example">
+  <main>
+    <h2>Main</h2>
+  </main>
 
-    <img src="img/pat1.png" alt="Pattern 1" width="200" heigth="200">
-
-  </section> -->
-
-  <section>
-    <p class="clip">Jane</p>
-  </section>
+  <footer>
+    <h2>Footer</h2>
+  </footer>
 </body>
 
 </html>
