--- a/index.html
+++ b/index.html
@@ -14,40 +14,18 @@
 
 <body>
   <header>
-    <h1>Our Staff</h1>
+    <h1>Header</h1>
     <nav>
-      <a href="#profile1">Joe</a>
-      <a href="#profile2">Matt</a>
-      <a href="#profile3">Jane</a>
+      <h2>Nav</h2>
     </nav>
   </header>
 
   <main>
-    <article id="profile1" class="card">
-      <figure>
-        <img src="img/profile1-500x500.png" alt="Joe Coder" width="500" height="500">
-        <figcaption>Joe Coder</figcaption>
-      </figure>
-      <p>I code stuff.</p>
-    </article>
-    <article id="profile2" class="card">
-      <figure>
-        <img src="img/profile2-500x500.png" alt="Matt Designer" width="500" height="500">
-        <figcaption>Matt Designer</figcaption>
-      </figure>
-      <p>I design stuff.</p>
-    </article>
-    <article id="profile3" class="card">
-      <figure>
-        <img src="img/profile3-500x500.png" alt="Jane Dev Rel" width="500" height="500">
-        <figcaption><span class="nowrap">Jane Dev Rel</span></figcaption>
-      </figure>
-      <p>I teach stuff.</p>
-    </article>
+    <h2>Main</h2>
   </main>
 
   <footer>
-    <p>&copy; Acme Co.</p>
+    <h2>Footer</h2>
   </footer>
 </body>
 
