learned more about css variables

--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
   </header>
 
   <main>
-    <h2>Main</h2>
+    <div class="square">
+      <p>Hey</p>
+    </div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square square--highlight">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
+    <div class="square">🎌</div>
   </main>
 
   <footer>
