--- a/index.html
+++ b/index.html
@@ -21,20 +21,33 @@
   </header>
 
   <main>
-    <div class="square">
-      <p>Hey</p>
+    <section>
+      <h2>My Heading</h2>
+      <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quo aperiam
+        porro, odio
+        mollitia suscipit eius
+        similique corrupti! Facere nihil cum recusandae officia autem tenetur suscipit
+        exercitationem atque
+        tempora
+        molestiae.
+      </p>
+      <br>
+      <a href="https://www.google.com/">Google</a>
+    </section>
+    <!-- <div class="square">
+        <p>Hey</p>
     </div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square square--highlight">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
-    <div class="square">🎌</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square square--highlight">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div>
+    <div class="square">💻</div> -->
   </main>
 
   <footer>
