--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
       <br>
       <a href="https://www.google.com/">Google</a>
     </section>
+    <aside>
+      <h2>Aside</h2>
+      <p class="content">
+        <span class="tooltip" data-tooltip="This is Latin">
+          Lorem</span> ipsum, dolor sit amet consectetur adipisicing elit. Adipisci officiis, ab,
+        ipsum
+        dolores laboriosam sit doloribus magni corporis, fugiat doloremque sed maiores! Eligendi
+        quis molestiae magnam ut ipsam eveniet qui quas architecto cumque non animi, aliquid
+        numquam, facere libero illo?
+      </p>
+    </aside>
     <!-- <div class="square">
         <p>Hey</p>
     </div>
