done with functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-    <section>
+    <!-- <section>
       <h2>My Heading</h2>
       <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quo aperiam
         porro, odio
@@ -44,9 +44,10 @@
         quis molestiae magnam ut ipsam eveniet qui quas architecto cumque non animi, aliquid
         numquam, facere libero illo?
       </p>
-    </aside>
-    <!-- <div class="square">
-        <p>Hey</p>
+    </aside> -->
+
+    <div class="square">
+      <p>Hey</p>
     </div>
     <div class="square">💻</div>
     <div class="square">💻</div>
@@ -58,7 +59,7 @@
     <div class="square">💻</div>
     <div class="square">💻</div>
     <div class="square">💻</div>
-    <div class="square">💻</div> -->
+    <div class="square">💻</div>
   </main>
 
   <footer>
