learned basics of animations

--- a/index.html
+++ b/index.html
@@ -13,58 +13,11 @@
 </head>
 
 <body>
-  <header>
-    <h1>Header</h1>
-    <nav>
-      <h2>Nav</h2>
-    </nav>
-  </header>
-
   <main>
-    <!-- <section>
-      <h2>My Heading</h2>
-      <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quo aperiam
-        porro, odio
-        mollitia suscipit eius
-        similique corrupti! Facere nihil cum recusandae officia autem tenetur suscipit
-        exercitationem atque
-        tempora
-        molestiae.
-      </p>
-      <br>
-      <a href="https://www.google.com/">Google</a>
-    </section>
-    <aside>
-      <h2>Aside</h2>
-      <p class="content">
-        <span class="tooltip" data-tooltip="This is Latin">
-          Lorem</span> ipsum, dolor sit amet consectetur adipisicing elit. Adipisci officiis, ab,
-        ipsum
-        dolores laboriosam sit doloribus magni corporis, fugiat doloremque sed maiores! Eligendi
-        quis molestiae magnam ut ipsam eveniet qui quas architecto cumque non animi, aliquid
-        numquam, facere libero illo?
-      </p>
-    </aside> -->
-
-    <div class="square">
-      <p>Hey</p>
-    </div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square square--highlight">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
-    <div class="square">💻</div>
+    <div class="square">🚀</div>
+    <div class="square">🔥</div>
+    <div class="square animate">🌮</div>
   </main>
-
-  <footer>
-    <h2>Footer</h2>
-  </footer>
 </body>
 
 </html>
