--- a/final-project/hours.html
+++ b/final-project/hours.html
@@ -13,9 +13,9 @@
 
 <body>
   <header class="header">
-    <h1 class="header__h1">The Little Taco Shop Hours</h1>
+    <h1 class="header__h1">Taco Shop Hours</h1>
     <nav class="header__nav">
-      <ul class="header_ul">
+      <ul class="header__ul">
         <li>
           <a href="/final-project">Home</a>
         </li>
