--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -30,21 +30,30 @@
         </li>
       </ul>
     </nav>
-
-    <section class="hero">
-      <figure>
-        <img src="img/tacos_close_up_1000x649.png" alt="Little Taco Shop Tacos"
-        title="Tacos ready to eat!" width="1000" height="649">
-        <figcaption class="offscreen">
-          Little Taco Shop Tacos
-        </figcaption>
-      </figure>
-    </section>
-
   </header>
-  <hr>
-  <main>
-    <section>
+
+  <section class="hero">
+    <figure>
+      <img src="img/tacos_close_up_1000x649.png" alt="Little Taco Shop Tacos"
+      title="Tacos ready to eat!" width="1000" height="649">
+      <figcaption class="offscreen">
+        Little Taco Shop Tacos
+      </figcaption>
+    </figure>
+  </section>
+
+  <main class="main">
+    <article class="main__article">
+      <h2>Our Location</h2>
+      <address>
+        555 Taco Temptation Lane, Suite T<br>
+        Kansas City, MO 55555-5555
+        <br><br>
+        Phone: <a href="tel:+5555555555">555-555-5555</a>
+      </address>
+    </article>
+
+    <article class="main__article">
       <h2>Our Contact Form</h2>
 
       <form action="https://httpbin.org/get" method="get">
@@ -68,20 +77,14 @@
         <button type="submit">Send</button>
         <button type="reset">Reset</button>
       </form>
-    </section>
-    <section>
-      <h2>Our Location</h2>
-      <address>
-        555 Taco Temptation Lane, Suite T<br>
-        Kansas City, MO 55555-5555
-        <br><br>
-        Phone: <a href="tel:+5555555555">555-555-5555</a>
-      </address>
-    </section>
+    </article>
   </main>
-  <hr>
-  <footer>
-    <p>Copyright &copy; The Little Taco Shop</p>
+
+  <footer class="footer">
+    <p>
+      <span class="nowrap">Copyright &copy;</span>
+      <span class="nowrap">Little Taco Shop</span>
+    </p>
   </footer>
 </body>
 
