--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -53,29 +53,31 @@
       </address>
     </article>
 
-    <article class="main__article">
-      <h2>Our Contact Form</h2>
+    <article class="main__article contact">
+      <h2 class="contact__h2">Our Contact Form</h2>
 
-      <form action="https://httpbin.org/get" method="get">
-        <fieldset>
-          <legend>Send Us A Message</legend>
-          <p>
-            <label for="name">Name:</label>
-            <input type="text" name="name" id="name" placeholder="your name" required>
+      <form action="https://httpbin.org/get" method="get" class="contact__form">
+        <fieldset class="contact__fieldset">
+          <legend class="offscreen">Send Us A Message</legend>
+          <p class="contact__p">
+            <label class="contact__label" for="name">Name:</label>
+            <input class="contact__input" type="text" name="name" id="name" placeholder="your name"
+            required>
           </p>
-          <p>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" placeholder="your email" required>
+          <p class="contact__p">
+            <label class="contact__label" for="email">Email:</label>
+            <input class="contact__input" type="email" name="email" id="email"
+            placeholder="your email" required>
           </p>
-          <p>
-            <label for="message">Your Message:</label>
+          <p class="contact__p">
+            <label class="contact__label" for="message">Your Message:</label>
             <br>
-            <textarea name="message" id="message" cols="30" rows="10"
+            <textarea class="contact__textarea" name="message" id="message" cols="30" rows="10"
             placeholder="Type your message here"></textarea>
           </p>
-        </fieldset>
-        <button type="submit">Send</button>
-        <button type="reset">Reset</button>
+        </fieldset class="contact__fieldset">
+        <button class="contact__button" type="submit">Send</button>
+        <button class="contact__button" type="reset">Reset</button>
       </form>
     </article>
   </main>
